--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,17 @@
 
+
+nav{
+    border:double 13px;
+    color: aliceblue;
+    width: 100%;
+    background-color: black;
+    border-radius: 20px;
+    border-color: rgba(128, 128, 128, 0.212);
+}
 ul a{
     padding: 40px;
     font-size: 25px;
-    color: black;
+    color: rgb(243, 241, 241);
     border-radius: 20px;
     transition-duration: 1s;
 }
@@ -17,10 +26,16 @@ ul a{
 }
 
 a{
+    transition-duration: 1s;
     text-decoration: none;
     color: rgb(137, 231, 243);
 }
+
+aside a:hover{
+    color:rgb(163, 47, 47)
+}
 ul a:hover{
+    color: black;
     background-color: aliceblue;
     font-size: 30px;
 
@@ -48,7 +63,7 @@ h1 {
     border: double 12px;
     border-color: rgba(128, 128, 128, 0.212);
     padding-top: 60px;
-    margin:0;
+    margin-top:50px;
     transition-duration: 1s;
 }
 h1:hover {
@@ -261,3 +276,63 @@ footer ul{
     grid-area: parrafop;
 }
  
+/*historia*/
+#bodyhistoria{
+    display: grid;
+    grid-template-columns: 1fr 1fr 0,5fr;
+    grid-template-rows: 0,5fr repeat(2, 1fr) 0,5fr;
+    grid-template-areas:
+    "headerhistoria headerhistoria headerhistoria"
+    "mainhistoria mainhistoria mainhistoria"
+    "mainhistoria mainhistoria mainhistoria"
+    "footerhistoria footerhistoria footerhistoria";
+}
+
+#headerhistoria{
+    grid-area: headerhistoria;
+}
+#mainhistoria{
+    grid-area: mainhistoria;
+}
+#footerhistoria{
+    grid-area: footerhistoria;
+}
+
+#mainhistoria{
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr  0,005fr;
+    grid-template-rows: 0,5fr 0,5fr 0,5fr 1fr;
+    grid-template-areas: 
+    "titulohistoria titulohistoria titulohistoria"
+    "subtitulohistoria subtitulohistoria subtitulohistoria"
+    "sinopsishistoria sinopsishistoria sinopsishistoria"
+    "sectionhistoria sectionhistoria asidehistoria";
+}
+
+#titulohistoria{
+    grid-area: titulohistoria;
+}
+#subtitulohistoria{
+    text-align: center;
+    border: solid;
+    border-color: rgb(170, 38, 38);
+    grid-area: subtitulohistoria;
+}
+
+#sinopsishistoria{
+    font-size: 20px;
+    grid-area: sinopsishistoria;
+}
+#sectionhistoria{
+    text-align: center;
+    border: double;
+    border-radius: 20px;
+    grid-area: sectionhistoria;
+}
+#asidehistoria{
+    grid-area: asidehistoria;
+}
+
+
+
