--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,6 @@
-
+body{
+    width: 100%;
+}
 header{
     width: 100%;
 }
@@ -12,6 +14,7 @@ nav{
 }
 ul a{
     width: 100%;
+    
     padding: 40px;
     font-size: 25px;
     color: rgb(243, 241, 241);
@@ -427,6 +430,72 @@ footer ul{
 
 
 /* vista celular*/
+/*index*/
+@media (max-width: 1034px){
+    body{
+        width: 100%;
+    }
+    header{display: flex;}
+    nav{
+        border:double 10px;
+        color: aliceblue;
+        width: 100%;
+        background-color: black;
+        border-radius: 20px;
+        border-color: rgba(128, 128, 128, 0.212);
+    }
+    ul a{
+        width: 100%;
+        padding: 16px;
+        font-size: 19px;
+        color: rgb(243, 241, 241);
+        border-radius: 20px;
+        transition-duration: 1s;
+    }
+}
 
+@media (max-width: 850px){
+    header{width: 100%;}
+    ul a{
+        width: 100%;
+        padding: 16px;
+        font-size: 13px;
+        color: rgb(243, 241, 241);
+        border-radius: 20px;
+        transition-duration: 1s;
+    }
 
+}
+@media (max-width: 754px){
+    ul a{
+        width: 100%;
+        padding: 8px;
+        font-size: 13px;
+        color: rgb(243, 241, 241);
+        border-radius: 20px;
+        transition-duration: 1s;
+    }
+}
 
+body{
+    width: 100%;
+}
+@media (max-width: 754px){
+    nav{
+        width: 100%;
+    }
+        ul a{
+            width: 100%;
+            padding: 3px;
+            font-size: 16px;
+            color: rgb(243, 241, 241);
+            border-radius: 20px;
+            transition-duration: 1s;
+        }
+    }
+
+    @media (max-width: 320px){
+        body{
+            width: 100%;
+        };
+    }
